# geography-rs

./: Cargo.toml  README.md
Wikipedia/Continent/: Area_and_population.csv
Wikipedia/ISO_3166-1_alpha-2/: README.md
Wikipedia/ISO_3166-1_alpha-3/: Officially_assigned_code_elements.txt  README.md
Wikipedia/ISO_3166-2/: CN.csv  README.md  US.csv
continent-code/: Cargo.toml  README.md
continent-code/src/: error.rs  lib.rs  seven.rs
continent-code/tests/: Continent  macro_continent_code.rs
continent-code/tests/Continent/: README.md
country-code/: Cargo.toml  README.md
country-code/src/: error.rs  lib.rs
country-code/src/iso3166_1/: alpha_2.rs  alpha_3.rs  mod.rs
country-code/src/iso3166_2/: cn.rs  mod.rs  us.rs
country-code/tests/: ISO_3166-1_alpha-2  ISO_3166-1_alpha-3  ISO_3166-2  macro_country_code.rs  macro_country_subdivision_code.rs
country-code/tests/ISO_3166-1_alpha-2/: Officially_assigned_code_elements.csv
data_set/: README.md
data_set/countrycode/: Cargo.toml  README.md
data_set/countrycode/data/: countrycode.csv
data_set/countrycode/src/: csv_format.rs  lib.rs  record.rs
data_set/countrycode/tests/: static.rs
