[package]
name = "country-code"
version = "0.4.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "Country Code"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/geography-rs"
homepage = "https://github.com/bk-rs/geography-rs"
documentation = "https://docs.rs/country-code"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
csv = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
