[package]
name = "countrycode"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "https://countrycode.org/ ALL COUNTRY CODES"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/geography-rs"
homepage = "https://github.com/bk-rs/geography-rs"
documentation = "https://docs.rs/countrycode"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["once_cell"]

[dependencies]
serde = { version = "1", default_features = false, features = ["std", "derive"] }
serde-field-with = { version = "0.1.2", default-features = false, features = ["std"] }
csv = { version = "1", default_features = false }

country-code = { version = "0.2", default-features = false, features = ["std", "serde"], path = "../../country-code" }
chrono-tz = { version = "0.8", default_features = false }

once_cell = { version = "1", default_features = false, features = ["std"], optional = true }
